# loadout

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cheats/: _template.yaml  manifest.yaml
docs/: ARCHITECTURE.md  CHEAT_SCHEMA.md  DEVELOPMENT_PLAN.md  Index.md
loadout/: __init__.py  __main__.py  browse.py  categories.py  cheat_pack.py  cheats.pack  cheats_cmd.py  config.py  guard.py  loader.py  models.py  output.py  pack_stats.py  search.py  substitute.py  tui.py  tui_hints.py  tui_screens.py  tui_theme.py  variables.py
loadout/cheats/: manifest.yaml
loadout/cheats/01-reconnaissance/: amass.yaml  anypicker.yaml  bardeen.yaml  bright-data.yaml  builtwith.yaml  cat.yaml  censys.yaml  chatpdf.yaml  cloud_enum.yaml  cobwebs.yaml  codiga.yaml  corporationwiki.yaml  cylect.yaml  darkgpt.yaml  dig.yaml  dnsdumpster.yaml  dnsrecon.yaml  domaintools-whois.yaml  dorkgenius.yaml  dorkgpt.yaml  email-spider.yaml  exonerator.yaml  explore-ai.yaml  falco.yaml  fierce.yaml  foca.yaml  gcp_service_enum.yaml  golddigger.yaml  host.yaml  ldns.yaml  (+38 more)
scripts/: build_cheat_pack.py  gen_from_notebook.py  gen_m01_recon.py  gen_m02_scanning.py  gen_m03_vuln.py  gen_m04_exploit.py
tests/: test_browse.py  test_categories.py  test_cheat_pack.py  test_cheats_cmd.py  test_cheats_pack.py  test_config.py  test_guard.py  test_loader.py  test_models.py  test_output.py  test_pack_stats.py  test_run_command.py  test_search.py  test_substitute.py  test_tui_actions.py  test_tui_browse.py  test_tui_format.py  test_tui_theme.py  test_tui_variables.py  test_variables.py
(+721 files in other folders)
