[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loadout-cli"
version = "0.3.1"
description = "Persistent pentest command launcher with built-in cheat sheets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Loadout contributors" }]
keywords = ["pentest", "ceh", "cli", "cheatsheet", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "pyperclip>=1.8",
    "textual>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
loadout = "loadout.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["loadout*"]

[tool.setuptools.package-data]
loadout = ["cheats/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.coverage.run]
branch = true
source = ["loadout"]

[tool.coverage.report]
fail_under = 80
omit = ["loadout/tui.py", "loadout/tui_screens.py", "loadout/__main__.py"]
